<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.oyofitness.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/ImageDesc"
            android:cropToPadding="false"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/banner" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/companyName"
            android:textColor="@android:color/black"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textViewDesc"
            style="@style/bulletText"
            android:text="@string/desc" />


        <TextView
            android:id="@+id/textViewAddress"
            style="@style/bulletText"
            android:drawableStart="@drawable/location"
            android:text="@string/address" />

        <TextView
            android:id="@+id/textViewPhone"
            style="@style/bulletText"
            android:drawableStart="@drawable/phone"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/textViewWeb"
            style="@style/bulletText"
            android:drawableStart="@drawable/web"
            android:text="@string/web" />


    </LinearLayout>

</ScrollView>
